# cursedboard

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix
examples/: config-client.toml  config-minimal.toml  config-p2p.toml  config-server.toml
linux/: Cargo.toml  build.zig  build.zig.zon
linux/src/: clipboard_provider.rs  main.rs  main.zig
macos/: Cargo.toml
macos/src/: clipboard_provider.rs  config.rs  error.rs  main.rs
nix/: module.nix
shared/: Cargo.toml
shared/src/: cli.rs  clipboard.rs  config.rs  connection.rs  discovery.rs  duration_serde.rs  instance.rs  lib.rs  network.rs  protocol.rs  simple_config_loader.rs
src/: discovery.rs  main.rs  peer.rs  protocol.rs  trust.rs
