[package]
name = "cursedboard"
version = "0.1.0"
edition = "2021"
description = "Zero-config clipboard sync across devices"
license = "MIT"

[dependencies]
anyhow = "1"
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
hmac = "0.12"
hostname = "0.4"
mdns-sd = "0.17"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
