[package]
name = "linux"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
arboard = { version = "3", features = ["wayland-data-control"] }
serde = { workspace = true }
bincode = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
