[package]
name = "macos"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
objc2 = "0.6.0"
objc2-app-kit = { version = "0.3.0", default-features = false, features = [
  "NSPasteboard",
  "NSPasteboardItem",
] }
objc2-foundation = { version = "0.3.0", features = ["NSString"] }
serde = { workspace = true }
bincode = { workspace = true }
