[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
mdns-sd = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
hostname = "0.4"

[dev-dependencies]
tempfile = "3"
